<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerConnect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context=".ConnectActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewConnect"
        android:layout_marginTop="96dp"
        app:cardCornerRadius="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary">

        <LinearLayout
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"
            android:id="@+id/layoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_edt_server"
                android:textColorHint="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtServer"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connect_txt_hwid"
                android:textColorHint="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUniqueid"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/connect_txt_hwkey"
                android:textColorHint="@android:color/white"
                app:hintTextColor="@android:color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUniquekey"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:textColor="@android:color/black"
                android:id="@+id/ccbRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/connect_ccb_remember" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewConnect"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:text="@string/connect_btn_connect" />
</RelativeLayout>